Slowness when using interface in fullscreen mode #46993

Closed
opened 2015-12-16 11:03:12 +01:00 by Dewi BORDAGE · 13 comments

System Information

MacBook Pro memory 8 GB
OS X El Capitan (10.11.2)
Graphics : Intel Iris Graphics 6100

Blender Version

  • 2.76b (current)
  • tested with an older version : 2.73a -> same issue

Short description of error

Example of scene : startup scene with a cube at the center
Everything is fine on OS X window mode. When switching to OS X fullscreen mode, navigation in 3d view becomes extremely slow. When changing view with trackpad or emulated numpad, display gets refreshed after several seconds.

**System Information** MacBook Pro memory 8 GB OS X El Capitan (10.11.2) Graphics : Intel Iris Graphics 6100 **Blender Version** - 2.76b (current) - tested with an older version : 2.73a -> same issue **Short description of error** Example of scene : startup scene with a cube at the center Everything is fine on OS X window mode. When switching to OS X fullscreen mode, navigation in 3d view becomes extremely slow. When changing view with trackpad or emulated numpad, display gets refreshed after several seconds.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Dewi

Added subscriber: @Dewi

Added subscribers: @MartijnBerger, @brecht, @ThomasDinges

Added subscribers: @MartijnBerger, @brecht, @ThomasDinges
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can somebody with a Mac confirm this?

Can somebody with a Mac confirm this?
Author

Something new : I have not faced the issue when I used an external display. That is to say, with the same configuration as in the description and in OS X fullscreen mode on the external display, everything was fine.

Something new : I have not faced the issue when I used an external display. That is to say, with the same configuration as in the description and in OS X fullscreen mode on the external display, everything was fine.

Added subscribers: @MikeErwin, @sebastian_k, @Sergey

Added subscribers: @MikeErwin, @sebastian_k, @Sergey

@sebastian_k, @brecht, @MikeErwin, can you test the issue?

@sebastian_k, @brecht, @MikeErwin, can you test the issue?
Member

Common guys, that's weak!

Common guys, that's weak!

I can confirm the issue, using the same Intel Iris Graphics 6100.

It's not so much slow as there is a lag where e.g. menus don't draw properly until you move the mouse. The only Window Draw Method that appears to work correctly is Full, which is more of a debugging mode. As if OpenGL swapping isn't work correctly somehow.

I can confirm the issue, using the same Intel Iris Graphics 6100. It's not so much slow as there is a lag where e.g. menus don't draw properly until you move the mouse. The only Window Draw Method that appears to work correctly is Full, which is more of a debugging mode. As if OpenGL swapping isn't work correctly somehow.
Brecht Van Lommel self-assigned this 2016-01-07 21:53:26 +01:00

This issue was referenced by cd6c6ee1a5

This issue was referenced by cd6c6ee1a54ec0eed33592bcb7e499ce5141d4ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It's indeed related to swapping. It seems like a driver bug because I can't find a good explanation for why it would fail.

When drawing in fullscreen, graphics drivers often do an optimization where instead of copying (part of) the front buffer to the back buffer, they simply swap the pointers to the buffers to avoid doing a copy altogether. The default triple buffer drawing should work whether or not the driver does this optimization, but it seems to somehow fail here.

The workaround I found is to disable this code. I'm guessing this driver code path isn't tested as well and so might have a bug.

*Guarantees the back buffer contents to be valid after a call to NSOpenGLContext object's flushBuffer* needed for 'Draw Overlap' drawing method
attribs.push_back(NSOpenGLPFABackingStore);

Removing this breaks overlap drawing, but triple buffer is the default on Mac and works fine as far as I know. We will eventually remove overlap drawing anyway, probably in Blender 2.8.

It's indeed related to swapping. It seems like a driver bug because I can't find a good explanation for why it would fail. When drawing in fullscreen, graphics drivers often do an optimization where instead of copying (part of) the front buffer to the back buffer, they simply swap the pointers to the buffers to avoid doing a copy altogether. The default triple buffer drawing should work whether or not the driver does this optimization, but it seems to somehow fail here. The workaround I found is to disable this code. I'm guessing this driver code path isn't tested as well and so might have a bug. ``` *Guarantees the back buffer contents to be valid after a call to NSOpenGLContext object's flushBuffer* needed for 'Draw Overlap' drawing method attribs.push_back(NSOpenGLPFABackingStore); ``` Removing this breaks overlap drawing, but triple buffer is the default on Mac and works fine as far as I know. We will eventually remove overlap drawing anyway, probably in Blender 2.8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46993
No description provided.