Fix T46993: UI lag in fullscreen mode on OS X / Intel graphics.

If anyone finds OS X UI drawing glitches with different graphics cards please
report them and I'll add an exception specifically for Intel, but in theory this
should work fine for all graphics cards.